updated savedsearches endp to api contract
